[BUGFIX] Minimize word breaks in figure captions (#621)

--- a/Resources/Public/Css/bootstrap4-theme.css
+++ b/Resources/Public/Css/bootstrap4-theme.css
@@ -11691,7 +11691,7 @@ figure picture {
 figure .caption {
   padding-top: 0.5rem;
   font-size: 0.85rem;
-  word-break: break-all;
+  word-wrap: break-word;
   opacity: 0.8;
   text-align: center;
 }
