--- a/Resources/Public/Less/Theme/figure.less
+++ b/Resources/Public/Less/Theme/figure.less
@@ -15,7 +15,7 @@ figure {
     .caption {
         padding-top: 0.5em;
         font-size: 0.85em;
-        word-break: break-all;
+        word-wrap: break-word;
         opacity: 0.8;
         text-align: center;
     }
