--- a/Resources/Public/Scss/Theme/_figure.scss
+++ b/Resources/Public/Scss/Theme/_figure.scss
@@ -15,7 +15,7 @@ figure {
     .caption {
         padding-top: 0.5rem;
         font-size: 0.85rem;
-        word-break: break-all;
+        word-wrap: break-word;
         opacity: 0.8;
         text-align: center;
     }
